@@ -1552,6 +1552,8 @@ string ZScript::VarToString(long ID)
 	case MESSAGEDATAPORTWID: return "MESSAGEDATAPORTWID";
 	case MESSAGEDATAPORTHEI: return "MESSAGEDATAPORTHEI";
 	case MESSAGEDATAFLAGSARR: return "MESSAGEDATAFLAGSARR";
+	case MESSAGEDATATEXTWID: return "MESSAGEDATATEXTWID";
+	case MESSAGEDATATEXTHEI: return "MESSAGEDATATEXTHEI";
 	
 	case DMAPDATAID: return "DMAPDATAID";
 	case DMAPDATAMAP: return "DMAPDATAMAP";
