@@ -1204,8 +1204,10 @@
 #define FILEPOS					1132
 #define FILEEOF					1133
 #define FILEERR					1134
+#define MESSAGEDATATEXTWID					1135
+#define MESSAGEDATATEXTHEI					1136
 
-#define LAST_BYTECODE 		1135
+#define LAST_BYTECODE 		1137
 
 //} END OF BYTECODE
 
