@@ -12058,6 +12058,8 @@ static AccessorTable MessageDataTable[] =
 	{ "setPortraitTileWidth",   ZVARTYPEID_VOID,          SETTER,       MESSAGEDATAPORTWID,   1,            0,                                    2,           {  ZVARTYPEID_ZMESSAGE,           ZVARTYPEID_FLOAT,        -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "getPortraitTileHeight",  ZVARTYPEID_FLOAT,         GETTER,       MESSAGEDATAPORTHEI,   1,            0,                                    1,           {  ZVARTYPEID_ZMESSAGE,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "setPortraitTileHeight",  ZVARTYPEID_VOID,          SETTER,       MESSAGEDATAPORTHEI,   1,            0,                                    2,           {  ZVARTYPEID_ZMESSAGE,           ZVARTYPEID_FLOAT,        -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
+	{ "TextHeight",             ZVARTYPEID_FLOAT,         GETTER,       MESSAGEDATATEXTHEI,   1,            0,                                    1,           {  ZVARTYPEID_ZMESSAGE,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
+	{ "TextWidth",              ZVARTYPEID_FLOAT,         GETTER,       MESSAGEDATATEXTWID,   1,            0,                                    1,           {  ZVARTYPEID_ZMESSAGE,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	
 	{ "",                       -1,                       -1,           -1,                   -1,           0,                                    0,           { -1,                               -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } }
 };
