@@ -1,6 +1,10 @@
 //2.55 Changes
 
 //Alpha 59
+Added 'messagedata->TextHeight' and 'messagedata->TextWidth'
+	These are shortcuts for 'Text->MessageHeight' and 'Width' respectively.
+	Should return the same values; which is the height/width of the message if
+	drawn using '->DrawString', with the font set in the messagedata.
 Fix the right 'Script Info' button.
 Add 'Clear' and 'Clear All' buttons to slot assign dialog.
 	'Clear' clears all scripts of the current type.
